# k8s-deployment-example

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
k8s/: autoscale.yaml
k8s/static/: deployment.yaml  ingress.yaml  service.yaml
load_test/: Dockerfile  locustfile.py
